<resources>
    <string name="app_name">"GimnasioZucaritaPro"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Textos FragmentLogin FragmentRegistro-->
    <string name="NombreLogin">nombre</string>
    <string name="ContraseñaLogin">contraseña</string>
    <string name="CorreoRegistro">correo</string>
    <string name="AccederLogin">Acceder</string>
    <string name="RegistroLogin">Registrarse</string>
    <!--Textos FragmentReservas-->
    <string name="canceled">CANCELADA</string>
    <!--Textos FragmentReserva-->
    <string name="TextoReservaInicio">La reserva está establecida para</string>
    <string name="dia">día de la reserva</string>
    <string name="Cancelar">Cancelar</string>
    <!--Tambien en FragmentReservas-->
    <string name="desde">desde</string>
    <string name="hasta">hasta</string>
    <!--Menu opciones configuracion de perfil-->
    <string-array name="OpcionesPerfil">
        <item>Idioma</item>
        <item>Cambiar datos</item>
        <item>Salir</item>
    </string-array>
    <string-array name="MesesAño">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="IdiomasAplicacion">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string-array name="OpcionesOrdenarReservas">
        <item>Precio \u2191</item>
        <item>Precio \u2193</item>
        <item>Fecha \u2191</item>
        <item>Fecha \u2193</item>
    </string-array>
    <string-array name="OpcionesOrdenarIntalaciones">
        <item>Nombre a-z</item>
        <item>Nombre z-a</item>
        <item>Precio \u2191</item>
        <item>Precio \u2193</item>
    </string-array>
    <string-array name="TiposInstalaciones">
        <item>Todos</item>
        <item>Tenis</item>
        <item>Baloncesto</item>
    </string-array>
    <!--Opciones nav Menu-->
    <string name="Instalaciones">Instalaciones</string>
    <string name="Reservas">Reservas</string>
    <string name="MisReservas">Mis Reservas</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Roles">Roles</string>
    <string name="Rol">Rol</string>
    <string name="Usuario">Usuario</string>
    <string name="Guardar">Guardar</string>
    <string name="EsCliente">Es cliente</string>
    <string name="Penalizado">Penalizado</string>
    <string name="TituloObservaciones">Observaciones de </string>
    <string name="NombreIncorrecto">Nombre incorrecto, debe tener entre 4 y 8 caracteres</string>
    <string name="ContraseñaIncorrecta">Contraseña incorrecta, debe tener entre 8 y 16 caracteres</string>
    <string name="CorreoIncorrecto">Correo incorrecto</string>
    <string name="FechaIncorrecta">La fecha debe ser superior o igual a la actual</string>
    <string name="Titulo">Titulo:</string>
    <string name="Filtros">Filtros</string>
    <string name="Observacion_">Observación:</string>
    <string name="ObservacionesDe">Observaciones de </string>
    <string name="SeleccionarUsuario">Clic aquí para seleccionar un usuario </string>
    <string name="Tipo">Tipo</string>
    <string name="PrecioHora">Precio hora</string>
    <string name="HoraApertura">Hora de apertura</string>
    <string name="HoraCierre">Hora de cierre</string>
    <string name="TiempoMinimo">Tiempo mínimo</string>
    <string name="TiempoMaximo">Tiempo máximo</string>
    <string name="Diadelareserva">Día de la reserva:</string>
    <string name="HoraInicio">Hora de inicio:</string>
    <string name="HoraFin">Hora de fin:</string>
    <string name="TituloUsuarios">Configuración de usuarios</string>
    <string name="TituloInstalaciones">Configuración de instalaciones</string>
    <string name="Perfil">Perfil</string>
    <string name="Observaciones">Observaciones</string>
    <string name="MisDatos">Mis datos</string>
    <string name="Idiomas">Idiomas</string>
    <string name="Reserva">Reserva</string>
    <string name="Instalacion">Instalación</string>
    <string name="Observacion">Obaservación</string>
    <string name="QuienSoy">¿Quién soy?</string>
    <string name="Ami">A mi</string>
    <string name="FinPenalizacion">Fin penalización</string>
    <string name="ReservaRealizada">Reserva realizada</string>
    <string name="CreditoInsuficiente">No hay monedos</string>
    <string name="Baneado">Estás baneado</string>
    <string name="SinNombre">Introduce un nombre</string>
    <string name="SinPrecio">Introduce un precio</string>
    <string name="InicioIncorrecto">Apertura o cierre incorrecto</string>
    <string name="TiempoReserva">Tiempo de reserva insuficiente</string>
    <string name="ObservacionGuardada">Observación guardada</string>
    <string name="ReservaCancelada">Reserva canceada</string>
    <string name="RolGuardado">Rol guardado</string>
    <string name="UsuarioCorrecto">Usuario guardado</string>
    <string name="UsuarioBaneado">Estas baneado</string>
</resources>